SynProdGITV1/force-app/main/default/objects/Product_Sales_Data__c/Product_Sales_Data__c.object-meta.xml
<CustomObject>
    <label>Product Sales Data</label>
    <nameField>
        <displayFormat>PSD-{00000000}</displayFormat>
        <label>Product Sales Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Sales Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>