SynProdGITV1/force-app/main/default/objects/Product_Sales_Data__c/fields/Delivery_unit__c.field-meta.xml
<CustomField>
    <fullName>Delivery_unit__c</fullName>
    <label>Delivery unit</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>