SynProdGITV1/force-app/main/default/objects/Product_Sales_Data__c/fields/Item_Category_Group__c.field-meta.xml
<CustomField>
    <fullName>Item_Category_Group__c</fullName>
    <label>Item Category Group</label>
    <length>4</length>
    <type>Text</type>
</CustomField>