SynProdGITV1/force-app/main/default/objects/Product_Sales_Data__c/fields/Minimum_Order_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Order_Quantity__c</fullName>
    <description>Minimum order quantity in base unit of measure</description>
    <label>Minimum Order Quantity</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>