SynProdGITV1/force-app/main/default/objects/Product_Sales_Data__c/fields/Product_Sales_Ext_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Sales_Ext_ID__c</fullName>
    <description>Combination of Product ID, Salesforce Org ID and Distribution Channel</description>
    <externalId>true</externalId>
    <inlineHelpText>Combination of Product ID, Salesforce Org ID and Distribution Channel</inlineHelpText>
    <label>Product Sales Ext ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>