SynProdGITV1/force-app/main/default/objects/Product_Sales_Data__c/fields/Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Organization</label>
    <referenceTo>Sales_Org_Data__c</referenceTo>
    <relationshipLabel>Product Sales Data</relationshipLabel>
    <relationshipName>Product_Sales_Data</relationshipName>
    <type>Lookup</type>
</CustomField>