SynProdGITV1/force-app/main/default/objects/Product_Sales_Data__c/fields/Sales_UoM__c.field-meta.xml
<CustomField>
    <fullName>Sales_UoM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales UoM</label>
    <referenceTo>UoM_Std_Data__c</referenceTo>
    <relationshipLabel>Product Sales Data</relationshipLabel>
    <relationshipName>Product_Sales_Data</relationshipName>
    <type>Lookup</type>
</CustomField>